solc_ossfuzz_seed_corpus/test_sol/test_0623669cbd6f9216073b50e3cb5fb53479d75f8c821060dd906349e219351df7_7b5dc1f0acd6e9cf827db38a81520c7c9cfc9166_sol.sol
==== Source:  ====

==== Source: su0.sol ====
enum EN0 {
  M0, M1, M2, M3, M4, M5, M6, M7,
  M8, M9, M10, M11, M12, M13, M14, M15,
  M16, M17, M18, M19, M20
}
library L0 {
  int32 public constant cons0 = (((int32((((~(int32(-2082844359))) ** uint216(uint216(105312291668557186697918027683670432318895095400549111254310977535))) / int32(0))) + int32(2147483647)) & int32(2147483647)) ^ int32(2147483647));
  function f0() external    returns(uint232 o0)
  {
  }
  using L0 for *;
  modifier m0(function (uint248, bytes24) external   i0) 
  {
    EN0 l0 = EN0.M3;
    for(;
;
)
    {
      if (((int232(0) % (((int232(0) * int232(441433236745067593426839111918473503565638140753319606467938126051700)) & int232(3450873173395281893717377931138512726225554486085193277581262111899647)) * int232(0))) > int232(3450873173395281893717377931138512726225554486085193277581262111899647)))
      {
        _;
      }
    }
  }
  EN0 public constant cons1 = EN0.M14;
  function f1(bytes4 i0,bytes11 i1) external   
  {
  }
  enum EN1 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71,
    M72, M73, M74, M75, M76, M77, M78, M79,
    M80, M81, M82, M83, M84, M85, M86, M87,
    M88, M89, M90, M91, M92, M93, M94, M95,
    M96, M97, M98, M99, M100, M101, M102, M103,
    M104, M105, M106, M107, M108, M109, M110, M111

  }
}
pragma solidity >= 0.0.0;
EN0 constant cons2 = EN0.M14;
type T0 is bool;
using L0 for uint;
error er0(uint80 ep0, function (function (bytes2, int112) external  ) external   returns (function () external   returns (bytes memory, bool, EN0)) ep1);
contract C0 {
  function f2() public   
  {
    address payable l0 = payable(address(this));
    assembly
    {
      switch l0
      case 0
      {
      }
      case 100741513052129700448998440925038725106787098581234037834360297028152936361613
      {
        stop()
      }
      case 0
      {
        return(115792089237316195423570985008687907853269984665640564039457584007913129639935, l0)
      }
      switch blockhash(115792089237316195423570985008687907853269984665640564039457584007913129639935)
      default
      {
      }
    }
  }
  type T1 is address;
  uint8 public constant cons3 = ((~(((~(((uint8(255) ** uint136(uint136(0))) ^ uint8(0)))) * uint8(222)))) << uint152(uint152(0)));
  using L0 for *;
  modifier m1(bytes28 i0) virtual
  {
    bytes23 l0 = bytes23(0x0000000000000000000000000000000000000000000000);
    _;
  }
  struct St0 {
    int208[1] el0;
    L0.EN1 el1;
    int144 el2;
  }
  C0.St0   s0 = C0.St0([int208(0)], L0.EN1.M37, int144(0));
  C0.St0  public s1 = C0.St0([int208(-127390713714408681873513347986367370956866570218963961023411036)], L0.EN1(uint8(255)), int144(0));
  uint224   s2;
  constructor(uint224 i0)   {
    s2 &= ((((((uint224(26959946667150639794667015087019630673637144422540572481103610249215) ** uint192(uint192(0))) % uint224(26959946667150639794667015087019630673637144422540572481103610249215)) & uint224(26843755247560672179606169873073599468714415764686566122853091366542)) ** uint112(uint112(1367754389712566700644007565890746))) >> uint232(uint232(314027611930219379077216054124443458642555516973065045113525033396391))) - uint224(13112577147577737520106479664617839386508928413712716819422563664930));
    unchecked {
      delete s0.el1;
    }
  }
  enum EN2 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42, M43, M44, M45, M46, M47,
    M48, M49, M50, M51, M52, M53, M54, M55,
    M56, M57, M58, M59, M60, M61, M62, M63,
    M64, M65, M66, M67, M68, M69, M70, M71

  }
}
// ----
// Warning 3149: (su0.sol:169-280): The result type of the exponentiation operation is equal to the type of the first operand (int32) ignoring the (larger) type of the second operand (uint216) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// DeclarationError 6792: (su0.sol:2132-2253): Duplicate case "0" defined.
// Warning 9592: (su0.sol:2260-2386): "switch" statement with only a default case.
// Warning 3149: (su0.sol:2461-2494): The result type of the exponentiation operation is equal to the type of the first operand (uint8) ignoring the (larger) type of the second operand (uint136) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// Warning 3149: (su0.sol:2452-2548): The result type of the shift operation is equal to the type of the first operand (uint8) ignoring the (larger) type of the second operand (uint152) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
